--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
     "build": "next build",
     "dev": "next dev --port 5000 --hostname 0.0.0.0",
     "lint": "next lint",
-    "start": "next start --port 5000 --hostname 0.0.0.0"
+    "start": "next start --port 5000 --hostname 0.0.0.0",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:migrate": "prisma migrate dev",
+    "db:studio": "prisma studio",
+    "db:seed": "tsx prisma/seed.ts",
+    "db:reset": "prisma migrate reset --force"
   },
   "dependencies": {
     "@emotion/is-prop-valid": "latest",
@@ -66,7 +72,9 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "prisma": "^5.22.0",
+    "@prisma/client": "^5.22.0"
   },
   "devDependencies": {
     "@types/node": "^22",
@@ -74,6 +82,7 @@
     "@types/react-dom": "^18",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5"
+    "typescript": "^5",
+    "tsx": "^4.19.2"
   }
 }
